# email-reply-suggester

./: .env.example  .vercelignore  README.md  index.html  pyproject.toml  requirements.txt  run.py  vercel.json
api/: suggest.py
data/: build_dataset.py  emails.jsonl  test_set.jsonl
results/: meta_eval.json  meta_eval.md  report.md  responses.json  scores.csv
src/: _pool_data.py  config.py  evaluator.py  generator.py  llm.py  meta_eval.py  mock_backend.py  retriever.py  textsim.py
